Revert "bugfix: top right item of the header not correctly aligned on Samsung browser and Safari..."
This reverts commit 86f6fd398f1b42be922d355bcaa18f267d6df2b4.

--- a/src/wp-content/themes/azc/resources/assets/styles/scss/_header.scss
+++ b/src/wp-content/themes/azc/resources/assets/styles/scss/_header.scss
@@ -163,7 +163,7 @@
     width: 100%;
     .social-header {
         display: flex;
-        justify-content: end;
+        justify-content: right;
         margin-top: 20px;
         margin-right: 10px;
         .lang {
